<?xml version="1.0"?>
<package format="2">
  <name>sawyer_joystick</name>
  <version>0.0.1</version>
  <description>Package to control the Sawyer robot using a joystick</description>
  <maintainer email="oramos@utec.edu.pe">Oscar Ramos</maintainer>

  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
